--- a/Documents/S6/ProyectoIngesoft/PrototipoIngesoft/web/estilos2.css
+++ b/Documents/S6/ProyectoIngesoft/PrototipoIngesoft/web/estilos2.css
@@ -29,7 +29,9 @@ and open the template in the editor.
     
     width: 10px;
     height: 10px;
-    margin-left: 30px;  
+    margin-left: 40px;  
+    position: fixed;
+    top: 300px;
 }
 
 .imgusuario{
@@ -43,6 +45,67 @@ and open the template in the editor.
     border: solid #fff 5px;
           
 }
+.imgusuario2{
+    
+    width: 50px;
+    height: 50px;
+    align: right;
+    margin-left:0px;
+    margin-right: 30px;
+    border-radius: 50%;
+    border: solid #fff 5px;
+          
+}
+
+.contproy{
+    
+    width: 200px;
+    height: 130px;
+    background: #ff8000;
+    padding: 10px;
+    margin:20px;
+    align-self: center;
+    border-radius: 0%;
+    border: solid #fff 5px;
+    display: inline;
+          
+}
+
+.box{
+    
+    transform: translate(-50%,-50%);
+    margin-left: 230px;
+    
+          
+}
+
+.box select{
+    
+    background: #0563af;
+    color: #ffffff;
+    padding: 10px;
+    width: 250px;
+    font-size: 20px;
+    height: 30px;
+    border: none;
+    box-shadow: 0 5px 25px rgba(0,0,0,.5);
+    -webkit-appearance: b;
+}
+
+.box:before{
+    
+   
+    content: '';
+    width: 50px;
+    height: 50px;
+    background: #007ce0;
+    line-height: 50px;
+}
+
+.box:hover:before{
+    background: #0472ca;
+}
+
 
 .inp2{
   box-shadow: 0;
